--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -2,13 +2,14 @@
   box-sizing: border-box
 
 body 
-  font-family: sans-serif
+  font-family: 'Poiret One', sans-serif
   width: 1680px
 
 input, button, textarea 
   font-family: Open Sans, sans-serif
 
 button 
+  font-family: 'Poiret One', sans-serif
   cursor: pointer
   &:focus
     outline: none
@@ -29,3 +30,5 @@ h1, h2, h3
 img 
   width: 100%
   height: auto
+
+$yellow-color: #edbb5f
