--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -2,24 +2,95 @@
   min-height: 120px  
   display: flex
   align-items: center
-  padding: 0 60px 0 120px 
-  height: 120px
+  padding: 0 125px 0 60px 
   &__nav 
+    width: 600px
+    display: flex
+    align-items: center
+    justify-content: space-between
     margin-left: auto 
     margin-right: 65px
   &__link 
-    width: 15px
+    position: relative
     color: #fff
     margin-right: 50px 
+    transition: 2s ease
     &:last-child
       margin-right: 0
+    &:before, &:after
+      position: absolute
+      content: ''
+      width: 10px
+      height: 40px
+      top: -50px
+      left: 50%
+      transform: translateX(-50%) 
+      background-color: rgba($yellow-color, 0.5)
+      visibility: hidden
+      opacity: 0
+      transition: visibility 0.3s ease-in-out, opacity 0.7s ease
+    &:after 
+      top: auto 
+      bottom: -50px
+    &:hover 
+      &:before, &:after 
+        opacity: 1
+        visibility: visible
   &__lang 
+    display: flex
+    align-items: center
+    font-size: 20px
     color: #fff
-
+    &:before 
+      content: ''
+      display: block
+      width: 90px 
+      height: 2px 
+      top: 50%
+      margin-right: 10px
+      transform: translateY(-50%)
+      background-color: $yellow-color
+  &__links
+    display: flex
+    align-items: center
+    position: absolute
+    top: 400px
+    right: -150px
+    transform: rotate(90deg)
+    &:before 
+      content: ''
+      height: 120px 
+      width: 2px 
+      transform: rotate(90deg) translateY(75px)
+      background-color: $yellow-color
+    &-email, &-phone
+      color: #fff
+      text-transform: uppercase
+    &-email 
+      margin-right: 80px
+  &__scroll-down 
+    display: flex
+    align-items: center
+    position: absolute 
+    height: 50px
+    right: 0
+    bottom: -100px  
+    transform: rotate(90deg)
+    color: #000
+    font-weight: 600
+    text-transform: uppercase
+    &:before 
+      content: ''
+      display: inline-block
+      height: 120px 
+      width: 2px 
+      transform: rotate(90deg) translateY(75px) translateX(1px)
+      background-color: $yellow-color
 
 .main 
   position: relative
   &-bg 
+    position: relative
     height: 880px 
     background-color: #000
   &-window
@@ -36,6 +107,41 @@
       left: 230px 
       z-index: 1
       color: #fff
-
+    &__uppertitle 
+      display: flex
+      align-items: center
+      margin-bottom: 30px
+      &-text 
+        font-size: 25px
+        font-weight: 600 
+    &__title 
+      font-size: 60px
+      text-shadow: 0 0 5px #fff
+      margin-bottom: 40px
+    &__btn 
+      position: relative
+      font-size: 20px
+      font-weight: 600
+      text-transform: uppercase
+      background-color: transparent
+      border: none
+      border-radius: 3px
+      padding: 10px
+      color: #fff
+      background-color: transparent
+      overflow: hidden
+      &:before 
+        position: absolute
+        content: ''
+        top: 0
+        left: -100%
+        width: 100%
+        height: 100%
+        background-color: $yellow-color
+        transition: 1s ease-in-out
+        z-index: -1
+      &:hover 
+        &:before 
+          left: 0
 
 
