--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -89,6 +89,7 @@
 
 .main 
   position: relative
+  margin-bottom: 370px
   &-bg 
     position: relative
     height: 880px 
@@ -96,10 +97,14 @@
   &-window
     position: absolute
     top: 120px
-    width: 1580px 
-    height: 955px
   &-photo 
     position: relative
+    width: 1580px 
+    height: 955px
+    &__img 
+      width: 100%
+      height: 100%
+      object-fit: cover
     &__text 
       position: absolute 
       top: 50%
@@ -143,5 +148,51 @@
       &:hover 
         &:before 
           left: 0
+  &-houses
+    position: absolute 
+    display: flex
+    align-items: center 
+    width: 875px 
+    height: 140px
+    left: 0
+    bottom: -75px
+    background-color: #fff
+    z-index: 5
+
+.housename 
+  display: flex
+  align-items: center
+  padding: 50px
+  cursor: pointer
+  border-bottom: 4px solid transparent
+  transition: 0.5s ease
+  &:hover 
+    transition: 0.5s 
+    border-bottom: 4px solid $yellow-color
+    .housename__number 
+      border: 1px solid $yellow-color
+      color: $yellow-color
+      transition: 0.5s
+    .housename__name
+      color: #000 
+      transition: 0.5s
+  &__number 
+    display: flex
+    align-items: center
+    justify-content: center
+    min-width: 50px
+    min-height: 50px
+    font-size: 17px
+    margin-right: 20px
+    border: 1px solid #aaaaaa
+    border-radius: 50%
+    transition: 0.5s ease
+  &__name 
+    font-size: 17px
+    font-weight: 600
+    color: #aaaaaa
+    transition: 0.5s ease
+
+
 
 
