--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -101,6 +101,7 @@
     position: relative
     width: 1580px 
     height: 955px
+    border-bottom: 5px solid $yellow-color
     &__img 
       width: 100%
       height: 100%
