--- a/src/sass/_welcome.sass
+++ b/src/sass/_welcome.sass
@@ -4,11 +4,13 @@
   display: flex
   align-items: center
   justify-content: space-between
+  margin-bottom: 95px
   &__text 
     width: 890px
   &__image 
     width: 575px
     height: 750px
+    box-shadow: 0 0 10px #000
   &__img
     width: 100%
     height: 100%
