--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,5 +3,10 @@
 @import '_main'
 @import '_welcome'
 @import '_steps'
+@import '_agent'
+@import '_invest'
+@import '_process'
+@import '_clients'
+@import '_footer'
 
 
