--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -3,7 +3,6 @@
 
 body 
   font-family: 'Poiret One', sans-serif
-  width: 1680px
 
 input, button, textarea 
   font-family: Open Sans, sans-serif
@@ -30,5 +29,61 @@ h1, h2, h3
 img 
   width: 100%
   height: auto
+  box-shadow: 0 0 10px #000
+
+.body-wrapper
+  width: 1680px
+  margin: 0 auto
+  box-shadow: 0 0 10px rgba(#000, 0.3)
 
 $yellow-color: #edbb5f
+
+.yellow-color
+  color: $yellow-color
+
+.yellow-btn 
+  padding: 15px 45px
+  font-size: 17px
+  text-transform: uppercase 
+  font-weight: 600
+  background-color: $yellow-color
+  color: #000
+  border: none
+
+.anim-btn
+  position: relative
+  display: flex
+  align-items: center
+  font-size: 20px
+  font-weight: 600
+  text-transform: uppercase
+  background-color: transparent
+  border: none
+  border-radius: 3px
+  padding: 10px
+  color: #fff
+  background-color: transparent
+  overflow: hidden
+  z-index: 2
+  &:before 
+    position: absolute
+    content: ''
+    top: 0
+    left: -100%
+    width: 100%
+    height: 100%
+    background-color: $yellow-color
+    transition: 1s ease-in-out
+    z-index: -1
+  &:hover 
+    &:before 
+      left: 0
+    .anim-btn__arrow 
+      transition: 1s
+      fill: #fff
+  &__arrow 
+    width: 30px
+    height: 25px 
+    margin-left: 10px
+    fill: $yellow-color
+    transition: 1s
