--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -106,6 +106,7 @@
       width: 100%
       height: 100%
       object-fit: cover
+      box-shadow: none
     &__text 
       position: absolute 
       top: 50%
@@ -120,35 +121,14 @@
       &-text 
         font-size: 25px
         font-weight: 600 
+      &-icon 
+        width: 35px
+        margin-left: 10px
+        box-shadow: none
     &__title 
       font-size: 60px
-      text-shadow: 0 0 5px #fff
+      text-shadow: 0 0 5px #000
       margin-bottom: 40px
-    &__btn 
-      position: relative
-      font-size: 20px
-      font-weight: 600
-      text-transform: uppercase
-      background-color: transparent
-      border: none
-      border-radius: 3px
-      padding: 10px
-      color: #fff
-      background-color: transparent
-      overflow: hidden
-      &:before 
-        position: absolute
-        content: ''
-        top: 0
-        left: -100%
-        width: 100%
-        height: 100%
-        background-color: $yellow-color
-        transition: 1s ease-in-out
-        z-index: -1
-      &:hover 
-        &:before 
-          left: 0
   &-houses
     position: absolute 
     display: flex
