--- a/src/sass/_steps.sass
+++ b/src/sass/_steps.sass
@@ -9,7 +9,6 @@
     top: 120px
     object-fit: cover
     z-index: 3
-    box-shadow: 0 0 10px #000
   &__img-2
     position: absolute
     width: 450px
@@ -18,7 +17,6 @@
     left: 550px
     object-fit: cover
     z-index: 3
-    box-shadow: 0 0 10px #000
   &__contact 
     position: absolute
     width: 820px
@@ -37,13 +35,6 @@
     &-subtitle 
       font-size: 18px 
       margin-bottom: 70px
-    &-btn 
-      padding: 15px 45px
-      font-size: 17px
-      text-transform: uppercase 
-      font-weight: 600
-      background-color: $yellow-color
-      color: #000
   &__steps
     position: absolute
     width: 1130px
@@ -51,7 +42,7 @@
     padding: 270px 0 60px 110px
     bottom: 0
     left: 0
-    background-color: #f9f9f9
+    background-color: #ebebeb
     z-index: 1
     &-title 
       font-size: 40px
@@ -71,6 +62,7 @@
     &-icon
       width: 120px
       margin-right: 20px
+      box-shadow: none
     &-2
       margin-left: 100px
     &-3 
