--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -87,13 +87,17 @@
       transform: rotate(90deg) translateY(75px) translateX(1px)
       background-color: $yellow-color
 
+.logo
+  width: 80px
+  box-shadow: none
+
 .main 
   position: relative
   margin-bottom: 370px
   &-bg 
     position: relative
     height: 880px 
-    background-color: #000
+    background: linear-gradient(135deg, #333333, #000)
   &-window
     position: absolute
     top: 120px
@@ -121,6 +125,7 @@
       &-text 
         font-size: 25px
         font-weight: 600 
+        text-shadow: 0 0 5px #000
       &-icon 
         width: 35px
         margin-left: 10px
