--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -3,21 +3,44 @@
   height: 900px 
   padding: 215px 110px 
   background: linear-gradient(135deg, #252525, #000000)
-  &__images 
+  &__images
     position: absolute
-    display: flex
-    width: 1680px 
-    height: 390px
     left: 0
     top: -300px
-    overflow-x: scroll
+    &-wrapper
+      display: flex
+      width: 1680px 
+      height: 390px
+      padding: 10px 230px  
+      transition: transform 1s
+    &-prev, &-next
+      position: absolute 
+      padding: 10px
+      width: 80px
+      height: 80px
+      left: 30px
+      top: -120px
+      transform: translateY(-50%) rotate(180deg)
+      background-color: rgba(#fff, 0.3)
+      border-radius: 50%
+      box-shadow: 0 0 20px rgba(#fff, 0.5)
+      z-index: 5
+      cursor: pointer
+    &-next 
+      left: auto
+      right: 30px
+      transform: translateY(-50%) rotate(0)
+  &__arrow
+    width: 60px
+    height: 60px
+    fill: $yellow-color
   &__top-image 
     align-self: flex-start
     flex-shrink: 0
     width: 300px 
     height: 340px 
-    border: 20px solid #fff 
-    border-bottom: 50px solid #fff
+    border: 15px solid #fff 
+    border-bottom: 40px solid #fff
     margin-right: 30px 
     box-shadow: 0 0 10px #000
     &:last-child
@@ -28,6 +51,7 @@
     width: 100% 
     height: 100%
     object-fit: cover
+    border: 5px solid #fff
     box-shadow: none
   &__subscr 
     display: flex
@@ -54,6 +78,7 @@
       background: transparent
       border: none
       font-size: 15px
+      color: #fff
     &-btn 
       display: flex
       align-items: center
@@ -64,6 +89,7 @@
       height: 40px
     &-arrow 
       width: 30px
+      height: 30px
       fill: $yellow-color
   &__divide 
     width: 100% 
@@ -100,6 +126,7 @@
       margin-bottom: 20px 
     &-name 
       display: flex
+      align-items: center
       margin-bottom: 10px
     &-link 
       font-size: 15px 
