--- a/src/sass/_welcome.sass
+++ b/src/sass/_welcome.sass
@@ -7,9 +7,14 @@
   margin-bottom: 95px
   &__text 
     width: 890px
+    top: 100px
+    opacity: 0
+    transform: translateY(100px)
   &__image 
     width: 575px
     height: 750px
+    opacity: 0
+    transform: translateX(50px)
   &__img
     width: 100%
     height: 100%
