--- a/src/sass/_agent.sass
+++ b/src/sass/_agent.sass
@@ -39,6 +39,8 @@
     position: absolute
     top: 255px 
     left: 695px 
+    transform: translateX(350px)
+    opacity: 0
   &__img-1
     width: 455px
     height: 635px 
@@ -48,6 +50,8 @@
     position: absolute
     top: 0 
     right: 25px
+    transform: translateX(450px)
+    opacity: 0
   &__img-2
     width: 420px 
     height: 620px
