--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -54,7 +54,7 @@ $yellow-color: #edbb5f
 
 .anim-btn
   position: relative
-  display: flex
+  display: inline-flex
   align-items: center
   font-size: 20px
   font-weight: 600
@@ -64,7 +64,7 @@ $yellow-color: #edbb5f
   border-radius: 3px
   padding: 10px
   color: #fff
-  background-color: transparent
+  text-shadow: 0 0 10px #000
   overflow: hidden
   z-index: 2
   &:before 
