--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -10,7 +10,7 @@
     justify-content: space-between
     margin-left: auto 
     margin-right: 65px
-  &__link 
+  &__link, &__anchor-link
     position: relative
     color: #fff
     margin-right: 50px 
@@ -73,12 +73,17 @@
     align-items: center
     position: absolute 
     height: 50px
-    right: 0
+    right: 15px
     bottom: -100px  
+    padding: 5px
     transform: rotate(90deg)
     color: #000
     font-weight: 600
     text-transform: uppercase
+    cursor: pointer
+    transition: 0.5s
+    &:hover 
+      background-color: $yellow-color
     &:before 
       content: ''
       display: inline-block
@@ -106,11 +111,24 @@
     width: 1580px 
     height: 955px
     border-bottom: 5px solid $yellow-color
-    &__img 
+    background-color: #fff
+    &__home 
+      position: absolute
+      top: 0
+      left: 0
       width: 100%
       height: 100%
       object-fit: cover
       box-shadow: none
+    &__img 
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      object-fit: cover
+      box-shadow: none
+      opacity: 0
     &__text 
       position: absolute 
       top: 50%
@@ -144,10 +162,59 @@
     bottom: -75px
     background-color: #fff
     z-index: 5
+    &__home 
+      display: flex
+      align-items: center
+      justify-content: center
+      height: 100%
+      padding: 0 20px
+      border-bottom: 5px solid transparent
+      cursor: pointer
+      transition: 0.5s
+      &:hover 
+        background-color: $yellow-color
+        border-bottom: 5px solid $yellow-color
+        .main-houses__icon 
+          fill: #000
+    &__icon 
+      width: 50px
+      height: 50px
+      fill: #aaaaaa
+      transition: 0.5s
+
+.home__text 
+  opacity: 0
+  position: absolute
+  width: 500px 
+  max-height: 0
+  padding: 20px
+  left: 230px 
+  top: 15%
+  color: #fff
+  background-color: rgba(#000000, 0.5)
+  box-shadow: 0 0 10px 10px rgba(#000000, 0.5)
+  text-shadow: 0 0 5px #000
+  font-size: 20px
+  z-index: 1
+  overflow: hidden
+  &-title 
+    font-size: 40px
+    margin-bottom: 20px 
+  &-place 
+    font-size: 25px
+    font-weight: 600
+    line-height: 1.5
+    margin-bottom: 20px
+  &-info
+    font-size: 20px
+    font-weight: 600
+    line-height: 1.3
+    margin-bottom: 20px
 
 .housename 
   display: flex
   align-items: center
+  height: 100%
   padding: 50px
   cursor: pointer
   border-bottom: 4px solid transparent
