--- a/src/sass/_process.sass
+++ b/src/sass/_process.sass
@@ -10,6 +10,8 @@
     top: 0
     left: 220px 
     z-index: 1
+    transform: translateY(150px)
+    opacity: 0
   &__img-2 
     position: absolute
     width: 730px 
@@ -18,6 +20,7 @@
     top: 910px 
     right: 130px 
     z-index: 1
+    transform: translateX(250px)
   &__info 
     &-title 
       font-size: 40px 
