--- a/src/sass/_steps.sass
+++ b/src/sass/_steps.sass
@@ -7,16 +7,20 @@
     height: 770px
     left: 0
     top: 120px
+    transform: translateY(200px)
     object-fit: cover
     z-index: 3
+    opacity: 0
   &__img-2
     position: absolute
     width: 450px
     height: 640px
     top: 0
     left: 550px
+    transform: translateY(-200px)
     object-fit: cover
     z-index: 3
+    opacity: 0
   &__contact 
     position: absolute
     width: 820px
@@ -57,6 +61,8 @@
     display: flex
     align-items: center
     margin-bottom: 20px
+    transform: translateX(-110px)
+    opacity: 0
     &:last-child
       margin-bottom: 0
     &-icon
