--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -41,6 +41,7 @@
     align-items: center
     font-size: 20px
     color: #fff
+    cursor: pointer
     &:before 
       content: ''
       display: block
@@ -54,8 +55,9 @@
     display: flex
     align-items: center
     position: absolute
+    height: 50px
     top: 400px
-    right: -150px
+    right: -120px
     transform: rotate(90deg)
     &:before 
       content: ''
@@ -73,7 +75,7 @@
     align-items: center
     position: absolute 
     height: 50px
-    right: 15px
+    right: 10px
     bottom: -100px  
     padding: 5px
     transform: rotate(90deg)
