--- a/src/sass/_process.sass
+++ b/src/sass/_process.sass
@@ -11,7 +11,6 @@
     left: 220px 
     z-index: 1
     transform: translateY(150px)
-    opacity: 0
   &__img-2 
     position: absolute
     width: 730px 
@@ -37,12 +36,20 @@
       position: absolute
       width: 885px 
       height: 900px
-      padding: 300px 230px 140px 125px
+      padding: 250px 230px 140px 125px
       left: 0 
       bottom: 0
       background-color: #000 
     &-bottom 
       color: #fff
+  &__contacts-link 
+    display: block
+    margin-bottom: 15px
+    font-size: 20px
+    color: #fff
+    &:nth-of-type(3)
+      margin-bottom: 25px
+
 
 .anim-btn--process 
   color: #000
