--- a/src/sass/_agent.sass
+++ b/src/sass/_agent.sass
@@ -14,8 +14,9 @@
     font-size: 25px 
     margin-bottom: 50px 
   &__video 
-    display: flex
+    display: inline-flex
     align-items: center
+    cursor: pointer
     &-btn 
       position: relative
       width: 55px
