--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -1,6 +1,9 @@
 .display-block
   display: block
 
+.display-none
+  display: none
+
 .image-anim-1
   transition: 2s
   opacity: 1
@@ -28,6 +31,12 @@
   max-height: 1200px
   opacity: 1
   transition: max-height 5s ease, opacity 3s ease
+
+.video-scale-open
+  transform: translate(-50%, -50%) scale(1)
+  transition: 1s
+
+
 
 
 
