--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -1,6 +1,5 @@
 .footer 
   position: relative
-  height: 900px 
   padding: 215px 110px 
   background: linear-gradient(135deg, #252525, #000000)
   &__images
@@ -82,6 +81,7 @@
     &-btn 
       display: flex
       align-items: center
+      justify-content: center
       position: absolute 
       top: 50%
       transform: translateY(-50%)
