--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -107,6 +107,94 @@ $yellow-color: #edbb5f
   background-color: rgba(#7e7e7e, 0.9)
   z-index: 8
 
+.real-estate__video
+  width: 100%
+  height: 100%
+  border: none
+  &-wrapper
+    display: none
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%) scale(0)
+    width: 1200px
+    height: 685px
+    border: 10px solid #fff
+    z-index: 20
+    transition: 1s
+
+.hide-bg
+  display: none
+  opacity: 0
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(#646464, 0.3)
+  z-index: 19
+
+.contacts-modal   
+  display: none
+  opacity: 0
+  position: fixed 
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  width: 400px
+  padding: 20px
+  background-color: #fff
+  box-shadow: 0 0 10px #000
+  z-index: 20
+  &__close
+    position: absolute
+    width: 30px
+    height: 30px
+    top: 0
+    right: 0
+    cursor: pointer
+    &-line 
+      position: absolute
+      width: 3px
+      height: 30px
+      background-color: #000
+      top: 0
+      left: 50%
+      transform: translate(-50%) rotate(-45deg)
+      &:first-child
+        transform: translate(-50%) rotate(45deg)
+  &__title 
+    font-size: 35px
+    font-weight: 600
+    padding-bottom: 20px
+    margin-bottom: 20px
+    border-bottom: 1px solid #000
+  &__name 
+    font-size: 25px 
+    margin-bottom: 15px
+  &__input 
+    width: 100%
+    padding: 5px 10px
+    margin-bottom: 20px
+  &__textarea
+    width: 100%
+    height: 100px
+    padding: 10px
+    resize: none
+    margin-bottom: 20px
+  &__btn 
+    padding: 10px 15px
+    background-color: $yellow-color
+    border: none
+    font-size: 20px
+    transition: 0.3s
+    &:hover 
+      box-shadow: 0 0 15px $yellow-color
+    
+
+
+
+
 
 
 
