--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -73,9 +73,11 @@
   &__scroll-down 
     display: flex
     align-items: center
+    justify-content: center
     position: absolute 
-    height: 50px
-    right: 10px
+    width: 120px
+    height: 60px
+    right: -10px
     bottom: -100px  
     padding: 5px
     transform: rotate(90deg)
@@ -93,6 +95,7 @@
       width: 2px 
       transform: rotate(90deg) translateY(75px) translateX(1px)
       background-color: $yellow-color
+    &-eng     
 
 .logo
   width: 80px
@@ -216,8 +219,9 @@
 .housename 
   display: flex
   align-items: center
+  width: 100%
   height: 100%
-  padding: 50px
+  padding: 30px
   cursor: pointer
   border-bottom: 4px solid transparent
   transition: 0.5s ease
