--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -33,7 +33,7 @@ img
   box-shadow: 0 0 10px #000
 
 .body-wrapper
-  width: 1680px
+  max-width: 1680px
   margin: 0 auto
   box-shadow: 0 0 10px rgba(#000, 0.3)
   overflow-x: hidden
