--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -111,10 +111,14 @@
   &-window
     position: absolute
     top: 120px
+    max-width: 1580px 
+    width: 100%
+    max-height: 955px
+    height: 100%
   &-photo 
+    width: 100%
+    height: 100%
     position: relative
-    width: 1580px 
-    height: 955px
     border-bottom: 5px solid $yellow-color
     background-color: #fff
     &__home 
@@ -193,7 +197,7 @@
   width: 500px 
   max-height: 0
   padding: 20px
-  left: 230px 
+  left: 10%
   top: 15%
   color: #fff
   background-color: rgba(#000000, 0.5)
