--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,138 +1,62 @@
+@media (max-width:1600px)
+  .steps__img-2
+    top: -200px
+    width: 350px
+    height: 500px
+  .agent__image-text 
+    text-align: right
+  .process__img-2
+    width: 500px
+    right: 50px
+  .process__info-top 
+    padding-right: 50px
+  .main-photo__text
+    left: 10%
 
-@media (max-width: 992px) 
-  .yellow-btn 
-    font-size: 30px
-  .anim-btn 
-    font-size: 30px
-  .header__link, .header__anchor-link
-    font-size: 32px
-    margin-right: 20px
-  .header__links
-  .header 
-    padding-right: 0
-  .header__nav 
-    width: 1000px
+@media (max-width:1300px)
+  .header
+    padding-right: 20px
+  .welcome__img
+    height: 500px
+  .agent__image-2
+    display: none
+  .invest__info
+    padding: 0 50px
+    font-size: 20px
+  .process__img-1
+    width: 500px
+    height: 800px
+    left: 100px
+  .process__info-top
+    left: 700px
+
+
+@media (max-width:1200px) 
   .logo 
-    width: 150px
     margin-right: 50px
-  .main-photo__uppertitle-text
-    font-size: 40px
-  .main-photo__title 
-    font-size: 80px
-  .main-houses 
-    width: 1200px
-  .housename__name 
-    font-size: 30px
-  .welcome__image, .welcome__text, .steps__img-1, .steps__img-2, .steps__step, .agent__image-1, .agent__image-2, .process__img-1, .process__img-2
-    opacity: 1
-    transform: translate(0, 0)
-  .welcome__title, .steps__contact-title, .steps__steps-title, .agent__title, .agent__title, .invest__title, .process__info-title, .clients__title, .footer__subscr-title
-    font-size: 70px
-  .welcome__info, .welcome__uppertitle, .steps__contact-subtitle, .steps__steps-text, .steps__step-name, .agent__subtitle, .agent__video-text, .agent__image-text, .invest__info, .process__info-text, .footer__subscr-uppertitle, .home__text-info
-    font-size: 35px
-    font-weight: 600
-  .home__text
-    width: 800px
-    left: 115px
-    top: 5%
-  .welcome 
-    height: 1900px
-  .welcome__image 
-    position: relative
-    top: -300px
+  .main 
+    margin-bottom: 200px
+  .welcome__img 
+    display: none
   .welcome__info 
     &:last-child
-      margin-left: 100px
-  .steps__contact 
-    height: 1200px
-    padding: 50px 20px 50px 150px
-  .steps__steps 
-    padding-top: 210px
-    bottom: -200px
-  .steps__steps-text 
-    max-width: 900px
-    font-weight: 600
-  .invest__title 
-    min-width: 650px
-  .invest__info
-    max-width: 800px
-  .process__img-1 
-    top: -100px
-  .process__info-black
-    height: 1200px
-    bottom: -120px
-  .process__contacts-link 
-    font-size: 35px
-  .client__img 
-    width: 200px
-    height: 200px
-  .footer__subscr
-    display: flex
-    flex-direction: column
-  .footer__subscr-text 
-    margin-bottom: 50px
-  .footer__subscr-form
-    width: 900px
-    height: 100%
-  .footer__subscr-input 
-    font-size: 50px
-  .footer__subscr-btn 
-    width: 100px
-    height: 90%
-  .footer__subscr-arrow
-    width: 100px
-    height: 100px
-  .footer__links-title, .footer__contacts-title
-    font-size: 60px
-  .footer__links-link, .footer__contacts-link, .footer__info-text, .footer__copyright
-    font-size: 40px
-  .footer__links-name, .footer__contacts-link
-    margin-bottom: 25px
-  .footer__icon 
-    display: none
-  .footer__logo-img
-    width: 300px
-    margin-bottom: 20px
-  
-@media (max-width: 576px) 
-  .body-wrapper
-    width: 1300px
-  .header__lang
-    font-size: 30px
-  .header__links
-    font-size: 25px 
-    right: -190px
-    top: 500px
-  .header__scroll-down
-    font-size: 25px
-    bottom: -150px
-  .main-photo 
-    width: 1200px
-    height: 1100px
-  .welcome__img 
-    height: auto
-  .invest, .process__info-top, .process__img-2, .agent__image-2, .steps__img-2
-    display: none
+      margin-left: 150px
+  .agent__image-1 
+    left: 560px
+  .agent__img-1 
+    width: 400px
   .process__img-1
-    left: 500px
-  .agent
-    margin-bottom: 300px
-  .footer__bottom 
-    flex-wrap: wrap
-    justify-content: space-between
-  .footer__links 
-    text-align: center
-    width: 50%
-  .footer__contacts
-    margin-top: 80px
-    width: 100%
-    text-align: center
-    &-name 
-      justify-content: center
-  .footer__info
+    width: 400px
+    height: 750px
+  .process__img-2
+    width: 250px
+    height: 350px
+  .process__info-top 
+    left: 550px
+  .invest 
     display: none
-
-  
- 
+  .steps__img-1 
+    width: 380px
+    height: 600px
 
 
