--- a/src/sass/_clients.sass
+++ b/src/sass/_clients.sass
@@ -1,9 +1,8 @@
 .clients 
   margin-bottom: 500px
-  &__title 
-    width: 960px
+  &__title  
     font-size: 40px 
-    margin: 0 auto 100px
+    margin: 0 20px 100px
     text-align: center
   &__clients 
     max-width: 1200px
