--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -1,11 +1,12 @@
 .footer 
   position: relative
-  padding: 215px 110px 
+  padding: 215px 110px 100px
   background: linear-gradient(135deg, #252525, #000000)
   &__images
     position: absolute
     left: 0
     top: -300px
+    width: 1680px
     &-wrapper
       display: flex
       width: 1680px 
@@ -68,7 +69,8 @@
       color: #fff 
     &-form 
       position: relative
-      width: 500px 
+      max-width: 500px
+      width: 100% 
       height: 50px 
       border: 1px solid #fff 
     &-input 
