--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -40,16 +40,20 @@ img
 
 $yellow-color: #edbb5f
 
-.header__hamburger
-  margin-left: 20px
-  &-line 
-    width: 30px
-    height: 3px
-    margin-bottom: 5px 
-    background-color: #fff
-    cursor: pointer
-    &:last-child
-      margin-bottom: 0
+.header
+  &__hamburger
+    display: none
+    margin-left: 20px
+    &-line 
+      width: 30px
+      height: 3px
+      margin-bottom: 5px 
+      background-color: #fff
+      cursor: pointer
+      &:last-child
+        margin-bottom: 0
+  &__close-menu 
+    display: none
 
 
 .yellow-color
