--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -124,20 +124,24 @@ $yellow-color: #edbb5f
   z-index: 8
 
 .real-estate__video
+  position: absolute
+  top: 0
+  left: 0
   width: 100%
   height: 100%
   border: none
   &-wrapper
-    display: none
+    display: flex
     position: fixed
+    width: 80%
+    padding-bottom: 46.25%
     top: 50%
     left: 50%
     transform: translate(-50%, -50%) scale(0)
-    width: 1200px
-    height: 685px
     border: 10px solid #fff
     z-index: 20
     transition: 1s
+
 
 .hide-bg
   display: none
