--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -131,7 +131,7 @@ $yellow-color: #edbb5f
   height: 100%
   border: none
   &-wrapper
-    display: flex
+    display: none
     position: fixed
     width: 80%
     padding-bottom: 46.25%
