--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -109,9 +109,10 @@
       background: transparent
       z-index: 10
       &-title 
+        padding: 15px
         color: #000
-        background: rgba(#fff, 0.5)
-        box-shadow: 0 0 20px 10px rgba(#fff, 0.5)
+        background: rgba(#fff, 0.8)
+        box-shadow: 0 0 20px 10px #fff
         z-index: 10
       &-subtitle 
         position: relative
